k8s-clean/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service # from-param: ${NAME_PREFIX}webapp-service
  namespace: ${NAMESPACE} # from-param: ${NAMESPACE}
  labels:
    app: webapp
    stage: ${STAGE} # from-param: ${STAGE}
    boundary: ${BOUNDARY} # from-param: ${BOUNDARY}
    tier: ${TIER} # from-param: ${TIER}
    environment: ${ENV} # from-param: ${ENV}
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
